# AlphaFold2-from-Scratch

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/: release.yml  release_template.md
data/: __init__.py  collate_proteins.py  dataloaders.py  loader_wrappers.py  preprocess_data.py  showcase_manifest.csv  showcase_manifest.yaml
model/: __init__.py  alphafold2.py  alphafold2_full_loss.py  alphafold2_heads.py  custom_dropout.py  evoformer_block.py  evoformer_stack.py  extra_msa_stack.py  input_embedder.py  invariant_point_attention.py  ipa_transformations.py  msa_colum_attention.py  msa_column_attention.py  msa_row_attention.py  msa_transitions.py  outer_product_mean.py  quaterion_to_matrix.py  recycling_module.py  structure_block.py  structure_transation.py  structure_transition.py  template_stack.py  torsion_head.py  triange_attention.py  triangle_attention.py  triangle_multiplication.py
notebooks/: Alpha_Fold.ipynb  Alpha_Fold_English.ipynb  Alpha_Fold_Spanish.ipynb  train_model_local.ipynb  train_model_setup_examples.ipynb
scripts/: common.py  inspect_data.py  prepare_data.py  train_ablation.py  train_ablation_parallel.py  train_model.py  train_parallel.py
tests/: conftest.py  test_ablation_cli.py  test_ablation_suite.py  test_data_ablation.py  test_embedder.py  test_eval_one_epoch.py  test_evoformer_ablation.py  test_extra_msa_stack.py  test_fape_distogram_loss.py  test_forward_model.py  test_frontend_modules.py  test_full_loss.py  test_geometry.py  test_geometry_structure_updater.py  test_helpers.py  test_loader_wrappers.py  test_metrics.py  test_module_integrity.py  test_output_heads.py  test_parallel_training.py  test_row_column_attention.py  test_scripts_cli.py  test_showcase_loader.py  test_structure_module.py  test_template_stack.py  test_train_eval_orchestration.py  test_training_utils.py  test_triangle_attention.py  test_warmup.py  test_warmup_lr.py
training/: __init__.py  autocast.py  checkpoints.py  chekpoints.py  colab_utils.py  efficent_metrics.py  ema.py  seeds.py  (+7 more)
(+38 files in other folders)
